# Neo3-GUI

./: .gitignore  Changelog.md  README.md  TAURI_MIGRATION_REPORT.md
.github/workflows/: release-all.yml  release.yml  release_mac.yml  release_mac_arm.yml
docs/: CONFIGURATION.md  USAGE.md
docs/plans/: 2026-01-28-neo-3.9.1-upgrade.md  2026-01-29-neo-3.9.1-build-fixes.md
neo3-gui/: neo3-gui.sln
neo3-gui/neo3-gui/: GuiStarter.cs  Helpers.cs  Program.cs  Startup.cs  neo3-gui.csproj  publish.macos.sh  publish.sh
neo3-gui/neo3-gui.tests/: AssetComparer_Test.cs  ByteArrayValueComparer_Test.cs  Helpers_Test.cs  PageList_Test.cs  TestBlockchain.cs  WebSocketStringResult_Test.cs  WsError_Test.cs  WsException_Test.cs  WsMessage_Test.cs  WsRequest_Test.cs  neo3-gui.tests.csproj
neo3-gui/neo3-gui.tests/Invokers/: BlockInvoker_Test.cs  WalletInvoker_Test.cs
neo3-gui/neo3-gui.tests/Storage/: TrackDB_Test.cs  WriteBatch_Test.cs
neo3-gui/neo3-gui/ClientApp/: package-lock.json  package.json
neo3-gui/neo3-gui/ClientApp/src-tauri/: Cargo.toml  tauri.conf.json
neo3-gui/neo3-gui/ClientApp/src-tauri/capabilities/: default.json
neo3-gui/neo3-gui/ClientApp/src-tauri/src/: config.rs  lib.rs
neo3-gui/neo3-gui/Common/: ApiVersion.cs  AppConstants.cs  CacheService.cs  CommandLineTool.cs  Constant.cs  JsonRpcMiddleware.cs  MethodMetadata.cs  Result.cs  WebSocketConnection.cs  WebSocketExecutor.cs  WebSocketHub.cs  WebSocketHubMiddleware.cs
neo3-gui/neo3-gui/Configuration/: ConfigurationExtensions.cs  NeoGuiOptions.cs  ServiceExtensions.cs
(+237 files in other folders)
