[package]
name = "neo-gui"
version = "1.6.0"
description = "Neo3-GUI - A cross-platform GUI for Neo blockchain"
authors = ["Neo Global Development"]
license = "MIT"
repository = "https://github.com/neo-ngd/Neo3-GUI"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "neo_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["process", "sync", "rt-multi-thread"] }
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
